--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
 <meta property="og:description" content="{% if post %}{{ post.description|truncatewords:30 }}{% else %}I share articles on technology, web development, tutorials, politics and useful guides to help you learn and grow.{% endif %}">
 
 {% if post and post.image %}
-<meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{{ post.image.url }}">
+<meta property="og:image" content="{{ post.image.url }}">
 {% else %}
 <meta property="og:image" content="https://res.cloudinary.com/dpsmjarzo/image/upload/v1763749073/default-og-image.jpg_sacy48.jpg">
 {% endif %}
@@ -29,10 +29,10 @@
 <!-- Twitter Card Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{% if post %}{{ post.title }}{% else %}PC Ramduhawma{% endif %}">
-<meta name="twitter:description" content="{% if post %}{{ post.description|truncatewords:30 }}{% else %}I share articles on technology, web development, tutorials, politics and useful guides to help you learn and grow.{% endif %}">
+<meta name="twitter:description" content="{% if post %}{{ post.description|truncatewords:30 }}{% else %}I share articles on technology, web development, tutorials, politics and useful guides to help you learn and grow. development{% endif %}">
 
 {% if post and post.image %}
-<meta name="twitter:image" content="{{ request.scheme }}://{{ request.get_host }}{{ post.image.url }}">
+<meta name="twitter:image" content="{{ post.image.url }}">
 {% else %}
 <meta name="twitter:image" content="https://res.cloudinary.com/dpsmjarzo/image/upload/v1763749073/default-og-image.jpg_sacy48.jpg">
 {% endif %}
