--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load static %}
 {% load cloudinary %}
 
 
@@ -346,6 +347,20 @@
 .search-btn:hover {
     opacity: 0.9;
 }
+.author-avatar {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.author-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 </style>
 {% endblock %}
@@ -357,8 +372,7 @@
     
     <div class="hero-content">
         <div class="hero-logo">
-            <div class="hero-logo-icon"></div>
-            <h1 class="hero-title" style="color: #f7931e;">PC Ramduhawma</h1>
+            <h1 class="hero-title" style="color: #f7931e;">Welcome to My Blog😊</h1>
         </div>
         <div class="hero-subtitle">LEARN WITH FUN</div>
 
@@ -402,13 +416,18 @@
                 <div class="blog-tag">{{ post.category.name }}</div>
                 <h3 class="blog-title">{{ post.title }}</h3>
                 <p class="blog-description">{{ post.description|truncatewords:20 }}</p>
-                <div class="blog-meta">
-                    <div class="author-avatar">{{ post.author|slice:":1"|upper }}</div>
-                    <div class="blog-meta-text">
-                        <div class="author-name">{{ post.author }}</div>
-                        <div class="blog-date">{{ post.created_at|date:"d M Y" }}</div>
-                    </div>
-                </div>
+<div class="blog-meta">
+    <div class="author-avatar">
+        {% if post.author_image %}
+            <img src="{{ post.author_image.url }}" alt="{{ post.author }}">
+        {% else %}
+            <img src="https://res.cloudinary.com/dpsmjarzo/image/upload/v1763828299/profileduha_m0rlty.jpg" alt="{{ post.author }}">
+        {% endif %}    </div>
+    <div class="blog-meta-text">
+        <div class="author-name">{{ post.author }}</div>
+        <div class="blog-date">{{ post.created_at|date:"d M Y" }}</div>
+    </div>
+</div>
             </div>
         </a>
         {% endfor %}
