--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -365,7 +365,7 @@
 <section class="about-hero">
     <div class="profile-section">
         <div class="profile-image">
-            <img src="{% static 'images/profileduha.jpg' %}" alt="PC Ramduhawma">
+            <img src="https://res.cloudinary.com/dpsmjarzo/image/upload/v1763828299/profileduha_m0rlty.jpg" alt="PC Ramduhawma">
         </div>
         <h1>PC Ramduhawma</h1>
         <p class="tagline">Tech Enthusiast • JEE Aspirant • Political Observer</p>
